# MMCV_MON0730_JNNBuilder

./: README.md
jnnbuilder/: pom.xml
jnnbuilder/headers/: .gitignore  CMakeLists.txt  pl_szajsjem_jni_BeeDnnLibdll.cpp  pl_szajsjem_jni_BeeDnnLibdll.h
jnnbuilder/java_binding/: BeeDNNJava.exp  BeeDNNJava.lib  CTestTestfile.cmake  cmake_install.cmake
jnnbuilder/src/main/java/pl/szajsjem/: ConnectionManager.java  GraphingArea.java  LossGraph.java  NetworkEditorGUI.java  NetworkEditorMenuBar.java  NetworkLayout.java  NetworkLoader.java  NetworkSerializer.java  NetworkStructureSerializer.java  NetworkValidator.java  NodeManager.java  OutputPreviewPanel.java  PropertiesPanel.java  TestInputPanel.java  TrainingDialog.java  TrainingSettingsDialog.java
jnnbuilder/src/main/java/pl/szajsjem/data/: CSVLoaderDialog.java  CategoricalMapping.java  DataManager.java
jnnbuilder/src/main/java/pl/szajsjem/elements/: ConnectionPoint.java  Node.java  RNNNode.java  SpecialNode.java
jnnbuilder/src/main/java/pl/szajsjem/jni/: BeeDnnLib.java  BeeDnnLibdll.java
jnnbuilder/src/main/java/pl/szajsjem/old/: GraphingArea.java  NetworkEditorMenuBar.java
